--- a/bio.html
+++ b/bio.html
@@ -65,7 +65,7 @@
         <nav>
             <ul>
                 <li><a href="#bio">Biography</a></li>
-                <li><a href="Mainpage.html">Main Page</a></li>
+                <li><a href="mainpage.html">Main Page</a></li>
             </ul>
         </nav>
     </header>
