--- a/bio.html
+++ b/bio.html
@@ -66,6 +66,8 @@
             <ul>
                 <li><a href="#bio">Biography</a></li>
                 <li><a href="mainpage.html">Main Page</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="orderform.html">Order Form</a></li>
             </ul>
         </nav>
     </header>
